--- a/public/css/style.css
+++ b/public/css/style.css
@@ -221,3 +221,7 @@
   background: none !important;
   font-weight: 500;
 }
+.accordion-button2 {
+  background: none !important;
+  font-weight: 500;
+}
